--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "atob": "^2.0.3",
