--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.1",
-    "bootstrap-css-only": "^4.0.0",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.0.7",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.8.2",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "request-promise": "^4.2.2"
