--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.1.0",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.7",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "request-promise": "^4.2.2"
   },
