--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^2.5.1"
   }
 }
